--- a/T03.html
+++ b/T03.html
@@ -1,3 +1,59 @@
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Adopt-a-Dragon - Find Your Perfect Companion</title>
+
+    <!-- INLINE CSS -->
+    <style>
+      .container {
+    display: flex;
+    gap: 20px;
+    padding: 20px;
+    flex-wrap: wrap;
+}
+main {
+    flex: 2;
+    background-color: #1a2e2a;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+}
+aside {
+    flex: 1;
+    background-color: #2d4a44;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+}
+main section {
+    margin-bottom:20px;
+    padding: 15px;
+    background-color: #ffffff;
+    border: 1px dashed #bbb;
+    border-radius: 5px;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+header {
+    position: sticky;
+    top: 0;
+    background-color: #111d1b;
+    color: white;
+    padding: 10px 20px;
+    z-index: 100;
+}
+main section:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1);
+}
+body {
+    font-family: ui-sans-serif, system-ui, -apple-system, sans-serif;
+    line-height: 1.5;
+    color: #1e293b;
+}
+    </style>
+</head>
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
