--- a/T03.html
+++ b/T03.html
@@ -24,6 +24,7 @@ aside {
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
+    color: white;
 }
 main section {
     margin-bottom:20px;
@@ -46,7 +47,7 @@ main section:hover {
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1);
 }
 body {
-    font-family: ui-sans-serif, system-ui, -apple-system, sans-serif;
+    font-family: "Times New Roman" , Times, serif;
     line-height: 1.5;
     color: #1e293b;
 }
