--- a/T03.html
+++ b/T03.html
@@ -3,7 +3,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adopt-a-Dragon - Find Your Perfect Companion</title>
 
-    <!-- INLINE CSS -->
     <style>
       .container {
     display: flex;
@@ -24,6 +23,7 @@ aside {
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
+    color: white;
 }
 main section {
     margin-bottom:20px;
