--- a/T03.html
+++ b/T03.html
@@ -19,7 +19,7 @@ main {
 }
 aside {
     flex: 1;
-    background-color: #1a2e2a;
+    background-color: #ffffff;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
