--- a/T03.html
+++ b/T03.html
@@ -4,7 +4,7 @@
     <title>Adopt-a-Dragon - Find Your Perfect Companion</title>
 
     <style>
-      .container {
+ .container {
     display: flex;
     gap: 20px;
     padding: 20px;
@@ -12,14 +12,14 @@
 }
 main {
     flex: 2;
-    background-color: #ffffff;
+    background-color: #1a2e2a;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
 }
 aside {
     flex: 1;
-    background-color: #ffffff;
+    background-color: #2d4a44;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -27,7 +27,7 @@ aside {
 main section {
     margin-bottom:20px;
     padding: 15px;
-    background-color: #2d4a44;
+    background-color: #ffffff;
     border: 1px dashed #bbb;
     border-radius: 5px;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
@@ -45,7 +45,7 @@ main section:hover {
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1);
 }
 body {
-    font-family: "Times New Roman" , Times, serif;
+    font-family: ui-sans-serif, system-ui, -apple-system, sans-serif;
     line-height: 1.5;
     color: #1e293b;
 }
