--- a/T03.html
+++ b/T03.html
@@ -23,6 +23,7 @@ aside {
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
+    color: #ffffff;
 }
 main section {
     margin-bottom:20px;
