--- a/T03.html
+++ b/T03.html
@@ -25,6 +25,9 @@ aside {
     border-radius: 8px;
     color: #ffffff;
 }
+aside * {
+    color: white !important;
+}
 main section {
     margin-bottom:20px;
     padding: 15px;
