--- a/T03.html
+++ b/T03.html
@@ -26,7 +26,7 @@ aside {
     color: #ffffff;
 }
 aside * {
-    color: white !important;
+    color: #ffffff !important;
 }
 main section {
     margin-bottom:20px;
