--- a/T03.html
+++ b/T03.html
@@ -54,7 +54,7 @@ body {
     color: #1e293b;
 }
 nav {
-    background-color: #2c3e50;
+    background-color: #2d4a44;
     padding: 10px 0;
 }
 
@@ -79,7 +79,7 @@ nav a:hover {
 
 
 footer {
-    background-color: #2c3e50;
+    background-color: #2d4a44;
     color: white;
     text-align: center;
     padding: 30px;
