--- a/T03.html
+++ b/T03.html
@@ -84,6 +84,9 @@ footer {
     text-align: center;
     padding: 30px;
     margin-top: 40px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    
 }
 
 footer a {
